It was great project

--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import load_boston\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "# widgetsnbextension==4.0.3"
    ],
    "metadata": {
     "collapsed": false,
