It was great project

--- a/main.ipynb
+++ b/main.ipynb
@@ -21,8 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.datasets import load_boston\n",
-    "import numpy as np\n",
-    "# widgetsnbextension==4.0.3"
+    "import numpy as np\n"
    ],
    "metadata": {
     "collapsed": false,
